--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   </div>
 </section>
 
-<section class="hero is-light is-small mt-4">
+<!-- <section class="hero is-light is-small mt-4">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel-horizontal" class="carousel results-carousel">
@@ -569,9 +569,9 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
-<section class="hero is-light is-small">
+<!-- <section class="hero is-light is-small">
   <div class="hero-body pt-0">
     <div class="container">
       <div id="results-carousel-vertical" class="carousel results-carousel">
@@ -940,7 +940,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <section class="section">
   <div class="container is-max-desktop">
@@ -1000,7 +1000,7 @@
 </section>
 
 
-<section class="section pt-0 pb-2">
+<!-- <section class="section pt-0 pb-2">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -1095,7 +1095,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <script>
   $(window).on('load', function() {
