--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                       <i class="fab fa-github"></i>
                   </span>
                   <span>
-                    Code: Coming soon
+                    Code
                   </span>
                   <!-- <img
                           src="https://img.shields.io/github/stars/prs-eth/marigold?style=for-the-badge&label=&color=333333&labelColor=333333" alt="GitHub stars"
