--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="publication-links">
               <!-- Paper link. -->
               <span class="link-block">
-                <a href="" target="_blank" rel="noopener noreferrer"
+                <a href="https://arxiv.org/pdf/2503.12779" target="_blank" rel="noopener noreferrer"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf" style="color: orangered"></i>
@@ -137,7 +137,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="" target="_blank" rel="noopener noreferrer"
+                <a href="https://github.com/Trans-Diff/TransDiff" target="_blank" rel="noopener noreferrer"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -145,13 +145,6 @@
                   <span>
                     Code
                   </span>
-                  <!-- <img
-                          src="https://img.shields.io/github/stars/prs-eth/marigold?style=for-the-badge&label=&color=333333&labelColor=333333" alt="GitHub stars"
-                          style="margin-top: 3px;"
-                  > -->
-                  <!-- <span>
-                    stars
-                  </span> -->
                 </a>
               </span>
               <!-- Hugging Face Space -->
